user side create new chat feature added
