# server/pkg/api/handler/interfaces/chat.go
@@ -4,4 +4,5 @@ import "github.com/gin-gonic/gin"
 
 type ChatHandler interface {
 	GetRecentChats(ctx *gin.Context)
+	SaveChat(ctx *gin.Context)
 }
