# server/pkg/repository/chat.go
@@ -1,7 +1,9 @@
 package repository
 
 import (
-	"github.com/gin-gonic/gin"
+	"context"
+	"time"
+
 	"github.com/nikhilnarayanan623/server/react-go-messenger/pkg/api/handler/request"
 	"github.com/nikhilnarayanan623/server/react-go-messenger/pkg/api/handler/response"
 	"github.com/nikhilnarayanan623/server/react-go-messenger/pkg/repository/interfaces"
@@ -19,7 +21,7 @@ func NewChatRepository(db *gorm.DB) interfaces.ChatRepository {
 	}
 }
 
-func (c *chatDatabase) FindAllRecentChatsOfUser(ctx *gin.Context, userID uint,
+func (c *chatDatabase) FindAllRecentChatsOfUser(ctx context.Context, userID uint,
 	pagination request.Pagination) (chats []response.Chat, err error) {
 
 	limit := pagination.Count
@@ -35,6 +37,26 @@ func (c *chatDatabase) FindAllRecentChatsOfUser(ctx *gin.Context, userID uint,
 	LIMIT $2 OFFSET $3`
 
 	err = c.db.Raw(query, userID, limit, offset).Scan(&chats).Error
+
+	return
+}
+
+func (c *chatDatabase) SaveChat(ctx context.Context, user1ID, user2ID uint) (chatID uint, err error) {
+
+	createdAt := time.Now()
+
+	query := `INSERT INTO chats (user1_id, user2_id, created_at) VALUES($1, $2, $3) RETURNING id`
+
+	err = c.db.Raw(query, user1ID, user2ID, createdAt).Scan(&chatID).Error
+
+	return
+
+}
+
+func (c *chatDatabase) FindChatIDByUser1AndUser2ID(ctx context.Context, user1ID, user2ID uint) (chatID uint, err error) {
+
+	query := `SELECT id FROM chats WHERE user1_id = $1 AND user2_id = $2`
+	err = c.db.Raw(query, user1ID, user2ID).Scan(&chatID).Error
 
 	return
 }
